--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <article id="Aram mahmoud">
                 <header>
                     <div class="title">
-                        <h2>1. Naam aanpassen</h2>
+                        <h2>1. Aram mahmoud</h2>
                     </div>
                     <div class="meta">
                         <img src="images/placeholder.jpg">
