--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header id="header">
             <h1 id="page-title">LO1E VCS 2.T1</h1>
             <p id="naam">Aram mahmoud</p>
-            <p id="version">Versie: 1.0</p>
+            <p id="version">Versie: 1.1</p>
         </header>
 
         <main>
@@ -49,10 +49,10 @@
                 </section>
             </article>
 
-            <article id="student-naam">
+            <article id="Aram mahmoud">
                 <header>
                     <div class="title">
-                        <h2>1. Naam aanpassen</h2>
+                        <h2>1. Aram mahmoud</h2>
                     </div>
                     <div class="meta">
                         <img src="images/placeholder.jpg">
@@ -118,11 +118,11 @@
                         <h2>3. Een conflict oplossen</h2>
                         <p>
                             Winnaar:
-                            <span id="winnaar">Niemand</span>
+                            <span id="winnaar">chuck noriss </span>
                         </p>
                     </div>
                     <div class="meta">
-                        <img id="winnaar-image" src="images/chuck-vs-bruce.jpg">
+                        <img id="winnaar-image" src="images/chuck-norris.jpg">
                     </div>
                 </header>
 
@@ -176,7 +176,7 @@
                         <p>Soms is er bij een conflict geen keuze, maar moet je handmatig de wijzigingen samen voegen.</p>
                         <p>
                             Donaties:
-                            <span id="donaties">BTC 0,00</span>
+                            <span id="donaties">BTC 1,01</span>
                         </p>
                     </div>
                     <div class="meta">
@@ -234,7 +234,7 @@
                         <h2>5. Een branch rebasen</h2>
                         <p>
                             I are: 
-                            <span id="animal">Weasel</span>
+                            <strong id="animal">Baboon</strong>
                         </p>
                     </div>
                     <div class="meta">
